# to-orderly

./: .env  Cargo.toml  LICENSE  README.md  justfile
crates/libs/lib-templates/: Cargo.toml
crates/libs/lib-templates/src/: lib.rs  tests.rs
crates/libs/lib_templates/: Cargo.toml
crates/libs/lib_templates/src/: lib.rs  tests.rs
crates/services/web/: Cargo.toml
crates/services/web/src/: lib.rs
entity/src/: lib.rs  prelude.rs  template.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240130_112030_new_migration.rs  m20240130_215925_seed_data.rs
src/: lib.rs  main.rs  tests.rs
