[package]
name = "io_orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sqlx = "0.7.3"
serde = { version = "1.0.196", features = ["derive"] }
getset = "0.1.2"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite",
  "sqlx-mysql",
  "sqlx-any",
] }
thiserror = "1.0.57"
serde_json = "1.0.113"
