[package]
name = "to-orderly"
version = "0.1.0"
edition = "2021"
author = "Tomás Marques <tomascpmarques@gmail.com>"
license = "MIT"

# ----------------------------------------------------

[dependencies]
# Data-type serialization and deserialization
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }

# Sql generation and database connection
sqlx = "0.7.3"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite",
  "sqlx-mysql",
  "sqlx-any",
] }

# Quality of life
getset = "0.1.2"
thiserror = "1.0.57"
