[package]
name = "lib_templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite",
  "sqlx-mysql",
  "sqlx-any",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.113"
sqlx = "0.7.3"
